Correção das migrations